Add car images and modern design to home page

--- a/home.html
+++ b/home.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+  <!-- Header with BMW Logo -->
+  <header>
+    <img src="assets/images/bmw-logo.png" alt="BMW Logo" class="header-logo">
+  </header>
+
   <!-- Selector موديلات BMW -->
   <div class="car-selector">
     <button data-target="e46">BMW E46</button>
@@ -19,16 +24,25 @@
 
   <section class="car-section" id="e46">
     <h2>BMW E46</h2>
+    <div class="car-image">
+      <img src="assets/images/e46.avif" alt="BMW E46">
+    </div>
     <div class="viewer-box" id="viewer-e46"></div>
   </section>
 
   <section class="car-section" id="b340">
     <h2>BMW 340i</h2>
+    <div class="car-image">
+      <img src="assets/images/340.jpeg" alt="BMW 340i">
+    </div>
     <div class="viewer-box" id="viewer-b340"></div>
   </section>
 
   <section class="car-section" id="m5">
     <h2>BMW M5</h2>
+    <div class="car-image">
+      <img src="assets/images/x7.jpeg" alt="BMW M5">
+    </div>
     <div class="viewer-box" id="viewer-m5"></div>
   </section>
 
