--- a/home.html
+++ b/home.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+  <!-- BMW Icon -->
+  <div class="bmw-icon">
+    <div class="icon-circle">
+      <img src="assets/images/bmw-logo.png" alt="BMW Icon">
+    </div>
+  </div>
+
   <!-- Header with BMW Logo and Tagline -->
   <header>
     <div class="header-content">
@@ -30,93 +37,96 @@
 
   <section class="car-section" id="e46">
     <h2>BMW E46 M3</h2>
-    <div class="car-details">
-      <div class="car-specs">
-        <div class="spec-item">
-          <span class="spec-label">Engine:</span>
-          <span class="spec-value">3.2L I6</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Power:</span>
-          <span class="spec-value">343 hp</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">0-100 km/h:</span>
-          <span class="spec-value">5.2s</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Top Speed:</span>
-          <span class="spec-value">250 km/h</span>
-        </div>
-      </div>
-      <div class="car-description">
-        <p>The BMW E46 M3 is an icon of performance and precision. With its inline-6 engine and perfect weight distribution, it delivers unmatched driving dynamics that have made it legendary among enthusiasts.</p>
-      </div>
-    </div>
     <div class="car-image">
       <img src="assets/images/e46.avif" alt="BMW E46 M3">
+      <div class="image-overlay">
+        <div class="car-info">
+          <h3>BMW E46 M3</h3>
+          <div class="car-specs">
+            <div class="spec-item">
+              <span class="spec-label">Engine:</span>
+              <span class="spec-value">3.2L I6</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Power:</span>
+              <span class="spec-value">343 hp</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">0-100 km/h:</span>
+              <span class="spec-value">5.2s</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Top Speed:</span>
+              <span class="spec-value">250 km/h</span>
+            </div>
+          </div>
+          <p>The BMW E46 M3 is an icon of performance and precision. With its inline-6 engine and perfect weight distribution, it delivers unmatched driving dynamics that have made it legendary among enthusiasts.</p>
+        </div>
+      </div>
     </div>
     <div class="viewer-box" id="viewer-e46"></div>
   </section>
 
   <section class="car-section" id="b340">
     <h2>BMW 3 Series 340i</h2>
-    <div class="car-details">
-      <div class="car-specs">
-        <div class="spec-item">
-          <span class="spec-label">Engine:</span>
-          <span class="spec-value">3.0L I6 Turbo</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Power:</span>
-          <span class="spec-value">326 hp</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">0-100 km/h:</span>
-          <span class="spec-value">5.6s</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Top Speed:</span>
-          <span class="spec-value">250 km/h</span>
-        </div>
-      </div>
-      <div class="car-description">
-        <p>The BMW 340i combines luxury with performance in the ultimate driving machine. Its turbocharged inline-6 engine provides exhilarating acceleration while maintaining the legendary BMW handling characteristics.</p>
-      </div>
-    </div>
     <div class="car-image">
       <img src="assets/images/340.jpeg" alt="BMW 340i">
+      <div class="image-overlay">
+        <div class="car-info">
+          <h3>BMW 3 Series 340i</h3>
+          <div class="car-specs">
+            <div class="spec-item">
+              <span class="spec-label">Engine:</span>
+              <span class="spec-value">3.0L I6 Turbo</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Power:</span>
+              <span class="spec-value">326 hp</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">0-100 km/h:</span>
+              <span class="spec-value">5.6s</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Top Speed:</span>
+              <span class="spec-value">250 km/h</span>
+            </div>
+          </div>
+          <p>The BMW 340i combines luxury with performance in the ultimate driving machine. Its turbocharged inline-6 engine provides exhilarating acceleration while maintaining the legendary BMW handling characteristics.</p>
+        </div>
+      </div>
     </div>
     <div class="viewer-box" id="viewer-b340"></div>
   </section>
 
   <section class="car-section" id="m5">
     <h2>BMW M5 Competition</h2>
-    <div class="car-details">
-      <div class="car-specs">
-        <div class="spec-item">
-          <span class="spec-label">Engine:</span>
-          <span class="spec-value">4.4L V8 Twin-Turbo</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Power:</span>
-          <span class="spec-value">625 hp</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">0-100 km/h:</span>
-          <span class="spec-value">3.3s</span>
-        </div>
-        <div class="spec-item">
-          <span class="spec-label">Top Speed:</span>
-          <span class="spec-value">305 km/h</span>
-        </div>
-      </div>
-      <div class="car-description">
-        <p>The BMW M5 Competition represents the pinnacle of high-performance sedans. With its monstrous twin-turbo V8 and advanced M xDrive system, it delivers supercar performance in a practical package.</p>
-      </div>
-    </div>
     <div class="car-image">
       <img src="assets/images/x7.jpeg" alt="BMW M5 Competition">
+      <div class="image-overlay">
+        <div class="car-info">
+          <h3>BMW M5 Competition</h3>
+          <div class="car-specs">
+            <div class="spec-item">
+              <span class="spec-label">Engine:</span>
+              <span class="spec-value">4.4L V8 Twin-Turbo</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Power:</span>
+              <span class="spec-value">625 hp</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">0-100 km/h:</span>
+              <span class="spec-value">3.3s</span>
+            </div>
+            <div class="spec-item">
+              <span class="spec-label">Top Speed:</span>
+              <span class="spec-value">305 km/h</span>
+            </div>
+          </div>
+          <p>The BMW M5 Competition represents the pinnacle of high-performance sedans. With its monstrous twin-turbo V8 and advanced M xDrive system, it delivers supercar performance in a practical package.</p>
+        </div>
+      </div>
     </div>
     <div class="viewer-box" id="viewer-m5"></div>
   </section>
